plugins {
    id "io.micronaut.build.internal.convention-library"
}

dependencies {
    annotationProcessor project(":inject-java")

    api project(":inject-java")
    api project(":context")
//    api "com.google.testing.compile:compile-testing:0.19", {
//        exclude group:'com.google.truth', module:'truth'
//    }
    api libs.managed.groovy
    api(libs.managed.spock) {
        exclude module:'groovy-all'
    }
    if (!JavaVersion.current().isJava9Compatible()) {
        api files(org.gradle.internal.jvm.Jvm.current().toolsJar)
    }
    api libs.jetbrains.annotations

    testAnnotationProcessor project(":inject-java")
    testCompileOnly project(":inject-groovy")
    testImplementation libs.managed.validation
    testImplementation libs.javax.persistence
    testImplementation project(":runtime")
    testImplementation libs.javax.inject
    testImplementation libs.blaze.persistence.core
    testImplementation libs.smallrye
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
    ]
    // https://github.com/gradle/gradle/issues/18824
    sourceCompatibility = 17
}

tasks.named("sourcesJar") {
    from "$projectDir/src/main/groovy"
}
